error fix image not show

--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
 
         <!-- Card 1 -->
         <div class="member">
-          <img src="/images/about/Lahiru_50.png" alt="" />
+          <img src="./images/about/Lahiru.png" alt="" />
          
            
           <div class="stars">
