--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <div class="box">
             <h3>Game developer<br></h3>
             <p>Apply Now</p>
-            <img src="images/category/Games_developer.png" alt="category">
+            <br><br><br><img src="images/category/Games_developer.png" alt="category">
             <a href="./gamedeveloper.html" class="btn" target="_blank">Show Now</a> <!--ලින්ක් දාන්න පෙජ් වල-->
         </div>
 
