--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
             <a href="./auidovisualtechnician.html" class="btn" target="_blank">Show Now</a>
         </div>
         <div class="box">
-            <h3>Game developer<br></h3>
+            <h3>Game<br> developer<br></h3>
             <p>Apply Now</p>
-            <br><br><br><img src="images/category/Games_developer.png" alt="category">
+            <img src="images/category/Games_developer.png" alt="category">
             <a href="./gamedeveloper.html" class="btn" target="_blank">Show Now</a> <!--ලින්ක් දාන්න පෙජ් වල-->
         </div>
 
