--- a/applicaton.html
+++ b/applicaton.html
@@ -213,7 +213,7 @@ form .fields .input-field{
 }
 
 
-#lnum{
+#lnumm{
     display: flex;
    margin-right: 34%;
   
@@ -428,7 +428,7 @@ form .buttons button , .backBtn{
                         <input type="text" placeholder="Enter your first name" id="name" required >
                     </div>
                
-                    <div class="input-field" id="lnum">
+                    <div class="input-field" id="lnumm">
                         <label>Last Name</label>
                         <input type="text" placeholder="Enter your last name" id="lname" required>
                     </div>
@@ -450,7 +450,7 @@ form .buttons button , .backBtn{
 
                 
 
-                    <div class="input-field" >
+                    <div class="input-field" id="lnumm" >
                         <label>Gender</label>
                         <select required  id="genlist">
                             <option disabled selected>Select gender</option>
@@ -469,7 +469,7 @@ form .buttons button , .backBtn{
                         <label>Mobile Number</label>
                         <input type="number" placeholder="Enter mobile number" id="num" required>
                     </div>
-                    <div class="input-field" >
+                    <div class="input-field" id="lnumm">
                         <label>lan Number</label>
                         <input type="number" placeholder="Enter lan number" id="lnum" required>
                     </div>
