--- a/jobs/WebDeveloper/details02.html
+++ b/jobs/WebDeveloper/details02.html
@@ -94,8 +94,9 @@ Full-Time
 </div>
 
 <div class="box">
-    <a href="/applicaton.html" class="btn " target="_blank">Apply Now</a> <!--ලින්ක් දාන්න පෙජ් වල-->
+    <a href="../../applicaton.html" class="btn " target="_blank">Apply Now</a> <!--ලින්ක් දාන්න පෙජ් වල-->
 </div>
+
 
 
 
