--- a/jobs/AppDeveloper/details01.html
+++ b/jobs/AppDeveloper/details01.html
@@ -109,7 +109,7 @@ Full-Time
 </div>
 
 <div class="box">
-    <a href="/applicaton.html" class="btn " target="_blank">Apply Now</a> <!--ලින්ක් දාන්න පෙජ් වල-->
+    <a href="../../applicaton.html" class="btn " target="_blank">Apply Now</a> <!--ලින්ක් දාන්න පෙජ් වල-->
 </div>
 
 
