--- a/jobs/AppDeveloper/details02.html
+++ b/jobs/AppDeveloper/details02.html
@@ -83,7 +83,7 @@ Posted on 13-May-22<br><br><br><br><br><br>
         </div>
 
         <div class="box">
-            <a href="/applicaton.html" class="btn " target="_blank">Apply Now</a> <!--ලින්ක් දාන්න පෙජ් වල-->
+            <a href="../../applicaton.html" class="btn " target="_blank">Apply Now</a> <!--ලින්ක් දාන්න පෙජ් වල-->
         </div>
 
 
