--- a/jobs/GameDeveloper/details02.html
+++ b/jobs/GameDeveloper/details02.html
@@ -98,8 +98,9 @@ Posted on 7-May-22<br><br><br><br><br><br>
         </div>
 
         <div class="box">
-            <a href="/applicaton.html" class="btn " target="_blank">Apply Now</a> <!--ලින්ක් දාන්න පෙජ් වල-->
+            <a href="../../applicaton.html" class="btn " target="_blank">Apply Now</a> <!--ලින්ක් දාන්න පෙජ් වල-->
         </div>
+        
 
 
 
