--- a/jobs/NetworkManager/details05.html
+++ b/jobs/NetworkManager/details05.html
@@ -116,8 +116,9 @@ Posted on 9-May-22<br><br><br><br><br><br>
 </div>
 
 <div class="box">
-    <a href="/applicaton.html" class="btn " target="_blank">Apply Now</a> <!--ලින්ක් දාන්න පෙජ් වල-->
+    <a href="../../applicaton.html" class="btn " target="_blank">Apply Now</a> <!--ලින්ක් දාන්න පෙජ් වල-->
 </div>
+
 
 
 
